# virtual-power-plant

./: .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  datasets.py  metrics.py  runner.py  scenarios.py
configs/: advanced_vpp_config.yaml
demos/: __init__.py  dashboard_demo.py  ev_fleet_demo.py  microgrid_demo.py  protocols_demo.py  residential_demo.py  trading_demo.py
examples/: advanced_configuration_demo.py  advanced_usage.py  basic_usage.py  enterprise_demo.py  optimization_framework_demo.py  simulation.py  trading_demo.py
monitoring/: docker-compose.monitoring.yml
monitoring/prometheus/: prometheus.yml
output/: demo_config.json  demo_config.yaml
src/vpp/: __init__.py  alerts.py  analysis.py  config.py  core.py  events.py  exceptions.py  forecasting.py  logging.py  metrics.py  models.py  optimization.py  resources.py  settings.py  simulation.py  validation.py  visualization.py
src/vpp/api/: __init__.py  app.py  deps.py  websocket.py
src/vpp/api/routes/: auth.py  config.py  health.py  optimization.py  protocols.py  resources.py  trading.py  v2g.py
src/vpp/auth/: __init__.py  middleware.py  security.py
src/vpp/cli/: __init__.py  main.py
src/vpp/config/: __init__.py  base.py  vpp_config.py
src/vpp/db/: __init__.py  base.py  engine.py  models.py  repositories.py
src/vpp/events/: __init__.py  bus.py
src/vpp/grid/: __init__.py  inverter.py  microgrid.py
src/vpp/models/: __init__.py  battery.py
src/vpp/optimization/: __init__.py  base.py  distributed.py  realtime.py  stochastic.py
src/vpp/protocols/: __init__.py  base.py  ieee2030_5.py  modbus.py  mqtt.py  ocpp.py  openadr.py
src/vpp/research/: __init__.py  anomaly.py  base.py  experiment_runner.py  forecasting.py
src/vpp/schemas/: __init__.py  auth.py  optimization.py  resources.py  trading.py
src/vpp/trading/: __init__.py  core.py  data.py  markets.py  orders.py  portfolio.py  strategies.py
src/vpp/v2g/: __init__.py  aggregator.py  models.py  scheduler.py
tests/: conftest.py  test_alerts.py  test_api_auth.py  test_api_health.py  test_api_optimization.py  test_api_resources.py  test_api_trading.py  test_benchmarks.py  test_db.py  test_demos.py  test_events.py  test_grid.py  test_optimization_framework.py  test_protocols.py  test_research.py  test_resources.py  test_schemas.py  test_settings.py  test_v2g.py  test_websocket.py
